Fixed overflow view in effect panel

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -13,7 +13,8 @@
 	& > .head
 		display: none
 	& > .wrap
-		// overflow-y: scroll !important
+		 //overflow-y: scroll !important
+		height: auto !important
 	.scrollBar
 		display: none !important
 	.group-list
